--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     
+    <script src="js/app.js"></script>
+    <script src="js/models/bee.js"></script>
     <script src="js/managers/appManager.js"></script>
     <script src="js/managers/dataManager.js"></script>
 </body>
