--- a/index.html
+++ b/index.html
@@ -9,10 +9,40 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
-    <script src="js/app.js"></script>
+
+    <!-- Models -->
+    <script src="js/models/address.js"></script>
+    <script src="js/models/album.js"></script>
     <script src="js/models/bee.js"></script>
+    <script src="js/models/comment.js"></script>
+    <script src="js/models/company.js"></script>
+    <script src="js/models/geo.js"></script>
+    <script src="js/models/photo.js"></script>
+    <script src="js/models/post.js"></script>
+    <script src="js/models/todo.js"></script>
+
+    <!-- Managers -->
     <script src="js/managers/appManager.js"></script>
     <script src="js/managers/dataManager.js"></script>
+
+    <!-- Components -->
+    <script src="js/components/appComponent.js"></script>
+    <script src="js/components/headerComponent.js"></script>
+    <script src="js/components/beeActivityComponent.js"></script>
+    <script src="js/components/todosComponent.js"></script>
+    <script src="js/components/todoComponent.js"></script>
+    <script src="js/components/albumComponent.js"></script>
+    <script src="js/components/photoComponent.js"></script>
+    <script src="js/components/postsComponent.js"></script>
+    <script src="js/components/postComponent.js"></script>
+    <script src="js/components/commentComponen.js"></script>
+    <script src="js/components/beesComponent.js"></script>
+    <script src="js/components/beeComponent.js"></script>
+    <script src="js/components/newPostComponent.js"></script>
+    <script src="js/components/newCommentComponent.js"></script>
+    <script src="js/components/newTodoComponent.js"></script>
+
+    <!-- App JS -->    
+    <script src="js/app.js"></script>
 </body>
 </html>
