--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- Managers -->
     <script src="js/managers/appManager.js"></script>
     <script src="js/managers/dataManager.js"></script>
+    <script src="js/managers/uiManager.js"></script>
 
     <!-- Components -->
     <script src="js/components/appComponent.js"></script>
