--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="js/managers/uiManager.js"></script>
 
     <!-- Components -->
+    <script src="js/components/albumsComponent.js"></script>
     <script src="js/components/albumComponent.js"></script>
     <script src="js/components/appComponent.js"></script>
     <script src="js/components/beeActivityComponent.js"></script>
