--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/b5035c45fa.js"></script>
 
+    <!-- Bootstrap 4.3.1 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <!-- Styles from main.scss -->
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="container-fluid">
 
     <!-- Models -->
     <script src="js/models/address.js"></script>
