--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,12 +18,26 @@
     <script src="https://kit.fontawesome.com/b5035c45fa.js"></script>
 
     <!-- Bootstrap 4.3.1 -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Styles from main.scss -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="container-fluid">
+    <main id="appComponent" class="row">
+        <div id="beesComponent" class="col-6"></div>
+
+        <div id="beeActivityComponent" class="col-6">
+            <div id="postsComponent" class="postsComponent"></div>
+            <div id="albumsComponent" class="albumsComponent" hidden></div>
+            <div id="todosComponent" class="todosComponent" hidden></div>
+            <div id="newPostComponent" class="newPostComponent" hidden>NEW POST</div>
+            <div id="newCommentComponent" class="newCommentComponent" hidden>New COMMENT</div>
+            <div id="newTodoComponent" class="newTodoComponent" hidden>NEW TODO</div>
+        </div>
+    </main>
 
     <!-- Models -->
     <script src="js/models/address.js"></script>
@@ -44,7 +59,6 @@
     <script src="js/components/albumsComponent.js"></script>
     <script src="js/components/albumComponent.js"></script>
     <script src="js/components/appComponent.js"></script>
-    <script src="js/components/beeActivityComponent.js"></script>
     <script src="js/components/beeComponent.js"></script>
     <script src="js/components/beesComponent.js"></script>
     <script src="js/components/commentComponent.js"></script>
@@ -58,7 +72,8 @@
     <script src="js/components/postsComponent.js"></script>
     <script src="js/components/todoComponent.js"></script>
     <script src="js/components/todosComponent.js"></script>
-    <!-- App JS -->    
+    <!-- App JS -->
     <script src="js/app.js"></script>
 </body>
+
 </html>
