--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body class="container-fluid">
-    <main id="appComponent" class="row">
+    <main id="mainComponent" class="row">
         <div id="beesComponent" class="col-6"></div>
 
         <div id="beeActivityComponent" class="col-6">
