--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="container-fluid">
+<body class="container-fluid bg-light">
     <main id="mainComponent" class="row">
         <div id="beesComponent" class="col-6"></div>
 
-        <div id="beeActivityComponent" class="col-6">
+        <div id="beeInformation" class="col-6">
             <div id="postsComponent" class="postsComponent"></div>
             <div id="albumsComponent" class="albumsComponent" hidden></div>
             <div id="todosComponent" class="todosComponent" hidden></div>
@@ -56,22 +56,22 @@
     <script src="js/managers/uiManager.js"></script>
 
     <!-- Components -->
-    <script src="js/components/albumsComponent.js"></script>
-    <script src="js/components/albumComponent.js"></script>
+    <!-- <script src="js/components/albumsComponent.js"></script> -->
+    <!-- <script src="js/components/albumComponent.js"></script> -->
     <script src="js/components/appComponent.js"></script>
     <script src="js/components/beeComponent.js"></script>
     <script src="js/components/beesComponent.js"></script>
-    <script src="js/components/commentComponent.js"></script>
+    <!-- <script src="js/components/commentComponent.js"></script> -->
     <script src="js/components/headerComponent.js"></script>
     <script src="js/components/mainComponent.js"></script>
-    <script src="js/components/newCommentComponent.js"></script>
-    <script src="js/components/newPostComponent.js"></script>
-    <script src="js/components/newTodoComponent.js"></script>
-    <script src="js/components/photoComponent.js"></script>
-    <script src="js/components/postComponent.js"></script>
-    <script src="js/components/postsComponent.js"></script>
-    <script src="js/components/todoComponent.js"></script>
-    <script src="js/components/todosComponent.js"></script>
+    <!-- <script src="js/components/newCommentComponent.js"></script> -->
+    <!-- <script src="js/components/newPostComponent.js"></script> -->
+    <!-- <script src="js/components/newTodoComponent.js"></script> -->
+    <!-- <script src="js/components/photoComponent.js"></script> -->
+    <!-- <script src="js/components/postComponent.js"></script> -->
+    <!-- <script src="js/components/postsComponent.js"></script> -->
+    <!-- <script src="js/components/todoComponent.js"></script> -->
+    <!-- <script src="js/components/todosComponent.js"></script> -->
     <!-- App JS -->
     <script src="js/app.js"></script>
 </body>
