--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     <script src="js/components/appComponent.js"></script>
     <script src="js/components/beeComponent.js"></script>
     <script src="js/components/beesComponent.js"></script>
-    <!-- <script src="js/components/commentComponent.js"></script> -->
+    <script src="js/components/commentComponent.js"></script>
     <script src="js/components/headerComponent.js"></script>
     <script src="js/components/mainComponent.js"></script>
     <!-- <script src="js/components/newCommentComponent.js"></script> -->
     <!-- <script src="js/components/newPostComponent.js"></script> -->
     <!-- <script src="js/components/newTodoComponent.js"></script> -->
     <!-- <script src="js/components/photoComponent.js"></script> -->
-    <!-- <script src="js/components/postComponent.js"></script> -->
-    <!-- <script src="js/components/postsComponent.js"></script> -->
+    <script src="js/components/postComponent.js"></script>
+    <script src="js/components/postsComponent.js"></script>
     <!-- <script src="js/components/todoComponent.js"></script> -->
     <!-- <script src="js/components/todosComponent.js"></script> -->
     <!-- App JS -->
