--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <div id="beesComponent" class="col-6"></div>
 
         <div id="beeInformation" class="col-6">
-            <div id="postsComponent" class="postsComponent"></div>
-            <div id="albumsComponent" class="albumsComponent" hidden></div>
-            <div id="todosComponent" class="todosComponent" hidden></div>
-            <div id="newPostComponent" class="newPostComponent" hidden>NEW POST</div>
-            <div id="newCommentComponent" class="newCommentComponent" hidden>New COMMENT</div>
-            <div id="newTodoComponent" class="newTodoComponent" hidden>NEW TODO</div>
+            <div id="postsComponent"></div>
+            <div id="albumsComponent"></div>
+            <div id="todosComponent"></div>
+            <!-- <div id="newPostComponent">NEW POST</div> -->
+            <!-- <div id="newCommentComponent">New COMMENT</div> -->
+            <!-- <div id="newTodoComponent">NEW TODO</div> -->
         </div>
     </main>
 
@@ -56,8 +56,8 @@
     <script src="js/managers/uiManager.js"></script>
 
     <!-- Components -->
-    <!-- <script src="js/components/albumsComponent.js"></script> -->
-    <!-- <script src="js/components/albumComponent.js"></script> -->
+    <script src="js/components/albumsComponent.js"></script>
+    <script src="js/components/albumComponent.js"></script>
     <script src="js/components/appComponent.js"></script>
     <script src="js/components/beeComponent.js"></script>
     <script src="js/components/beesComponent.js"></script>
@@ -67,7 +67,7 @@
     <!-- <script src="js/components/newCommentComponent.js"></script> -->
     <!-- <script src="js/components/newPostComponent.js"></script> -->
     <!-- <script src="js/components/newTodoComponent.js"></script> -->
-    <!-- <script src="js/components/photoComponent.js"></script> -->
+    <script src="js/components/photoComponent.js"></script>
     <script src="js/components/postComponent.js"></script>
     <script src="js/components/postsComponent.js"></script>
     <!-- <script src="js/components/todoComponent.js"></script> -->
