--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <script src="js/components/photoComponent.js"></script>
     <script src="js/components/postComponent.js"></script>
     <script src="js/components/postsComponent.js"></script>
-    <!-- <script src="js/components/todoComponent.js"></script> -->
-    <!-- <script src="js/components/todosComponent.js"></script> -->
+    <script src="js/components/todoComponent.js"></script>
+    <script src="js/components/todosComponent.js"></script>
     <!-- App JS -->
     <script src="js/app.js"></script>
 </body>
