--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="albumsComponent"></div>
             <div id="todosComponent"></div>
             <!-- <div id="newPostComponent">NEW POST</div> -->
-            <!-- <div id="newCommentComponent">New COMMENT</div> -->
+            <div id="newCommentComponent"></div>
             <!-- <div id="newTodoComponent">NEW TODO</div> -->
         </div>
     </main>
@@ -67,7 +67,7 @@
     <script src="js/components/commentComponent.js"></script>
     <script src="js/components/headerComponent.js"></script>
     <script src="js/components/mainComponent.js"></script>
-    <!-- <script src="js/components/newCommentComponent.js"></script> -->
+    <script src="js/components/newCommentComponent.js"></script>
     <!-- <script src="js/components/newPostComponent.js"></script> -->
     <!-- <script src="js/components/newTodoComponent.js"></script> -->
     <script src="js/components/photoComponent.js"></script>
