--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="postsComponent"></div>
             <div id="albumsComponent"></div>
             <div id="todosComponent"></div>
-            <!-- <div id="newPostComponent"></div> -->
+            <!-- <div id="newPostComponent">NEW POST</div> -->
             <div id="newCommentComponent"></div>
             <!-- <div id="newTodoComponent">NEW TODO</div> -->
         </div>
