Revert "Auto stash before revert of "feat""
This reverts commit 821b2d7bfd0fe6bdc29146073c179490e916f108.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="todosComponent"></div>
             <!-- <div id="newPostComponent">NEW POST</div> -->
             <div id="newCommentComponent"></div>
-            <div id="newTodoComponent"></div>
+            <!-- <div id="newTodoComponent">NEW TODO</div> -->
         </div>
     </main>
 
